Fixed header overlapping issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -411,7 +411,7 @@ footer{
     }
     #logo{
         margin-left: 0;
-        font-size: 200%;
+        font-size: 150%;
         width: 100%;
         text-align: center;
      }
